@@ -26,8 +26,6 @@ investigate problems with conditionally defined libraries
 add an error if the user makefile.am violates our
    namespace rules
 
-have 'make check' print tests which are skipped
-
 we need a document describing automake from the end user's point of view
 eg describe INSTALL_HEADER there, among other things
 
