@@ -1,3 +1,8 @@
+2002-04-25  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* lib/am/check.am: Show skipped tests.  Display the
+	$(PACKAGE_BUGREPORT) address on failure.
+
 2002-04-24  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	Fix PR automake/315:
